--- a/main.css
+++ b/main.css
@@ -10,35 +10,93 @@ body * {
     body{
         background-color: #0093B1;
     }
-    .container{
-        display: inline-block;
-        width: 600px;
-        margin-top: 100px;
-        margin-left: calc( ( 100% - 600px) / 2);
+        .container{
+            display: inline-block;
+            width: 800px;
+            margin-top: 100px;
+            margin-left: calc( ( 100% - 800px) / 2);
+            
+        }
+            .left-column {
+                display: inline-block;
+                float: left;
+                width: 40% ;
+                padding: 40px;
+                background-color: blueviolet;
+            
+            }
+                .title {
+
+                }
+                .footer {
+
+                }
+                    .link {
+
+                    }
+                    .amp {
+                        
+                    }
+
+            .right-column {
+                display: inline-block;
+                float: left;
+                width: 60%;
+                background-color:white;
+                padding: 60px;
+            }
+                .close {
+
+                }
+                .form{
+                    display: inline-block;
+                    width: 100%;
+                }
+                    .form-row {
+                        display: inline-block;
+                        width: 100%;
+                        margin-bottom: 30px;
+                    }
+                    .form-row: :last-of-type {
+                        margin-bottom: 0px; 
+                    }
+                        label{
+                            display: inline-block;
+                            width: 100%;
+                            margin-bottom: 5px;
+                            color: #777;
+                            text-transform: uppercase;
+                            font-size: 16px;
+                        }
+                        input{
+                            display: inline-block;
+                            width: 100%;
+                            font-size: 20px;
+                            border: none;
+                            border-bottom: 2px solid #999;
+                        }
+                        .btn {
+                           display: inline-block;
+                           background-color: #282C91;
+                           color: white;
+                           padding: 10px;
+                           padding-left: 50px;
+                           padding-right: 50px;
+                           border-radius: 20px;
+                           line-height: 20px;
+                        }
+                        .or {
+                            display: inline-block;
+                            line-height: 20px;
+                            padding-left: 30px;
+                            padding-right: 30px;
+                            padding-top: 10px;
+                        }
+                        .blue-link {
+                            display: inline-block;
+                            line-height: 20px;
+                            padding-top: 10px;
+                        }
+
+                        
         
-    }
-    .left-column {
-        display: inline-block;
-        float: left;
-        width: 40% ;
-        padding: 40px;
-        background-color: blueviolet;
-       
-    }
-        .title{
-
-        }
-        .footer{
-
-        }
-            .link{}
-            .ampersand{}
-
-    .right-column {
-        display: inline-block;
-        float: left;
-        width: 60%;
-        background-color: #4442AE;
-        padding: 60px;
-    }
-   
