--- a/main.css
+++ b/main.css
@@ -9,13 +9,24 @@ body * {
     }
     body{
         background-color: #0093B1;
+       
+        
+    }
+    .background {
+        width: 100%;
+        height: 100vh;
+        filter: blur(20px);
+        object-fit: cover;
+        object-position: center;
+
     }
         .container{
             display: inline-block;
             width: 800px;
-            margin-top: 100px;
-            margin-left: calc( ( 100% - 800px) / 2);
-            position: relative;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
             .left-column {
                 display: inline-block;
